tests/derive-bitfield-specifier/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> tests/derive-bitfield-specifier/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`, which is required by `<<DeliveryMode as CheckDiscriminantInRange<[(); 8]>>::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange`
   |
   = help: the trait `DiscriminantInRange` is implemented for `True`
note: required by a bound in `CheckDiscriminantInRange`
  --> src/private/checks.rs
   |
   | pub trait CheckDiscriminantInRange<A>
   |           ------------------------ required by a bound in this trait
   | where
   |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
   |                                                  ^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange`
   = note: `CheckDiscriminantInRange` is a "sealed trait", because to implement it you also need to implement `scryer_modular_bitfield::private::checks::DiscriminantInRange`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             scryer_modular_bitfield::private::checks::True
